<resources>
    <string name="app_name">Android Weather App</string>
    <string name="city_country">St.Johns,Canada</string>
    <string name="date_today">Friday, 23 November</string>
    <string name="current_temperature">-6</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">-6, partly cloudy</string>
    <string name="wind">WIND</string>
    <string name="wind_speed">23 km/h</string>
    <string name="humidity">HUMIDITY</string>
    <string name="humidity_rate">78%</string>
    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
</resources>
