<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.inducesmile.androidweatherapp.WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/city_country"
            android:textSize="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date_today"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sun"
            android:layout_marginTop="@dimen/_24sdp"/>
        
        <com.github.pavlospt.CircleView
            android:id="@+id/weather_result"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:cv_titleSubtitleSpace="40"
            app:cv_fillColor="@color/colorBackground"
            app:cv_strokeColorValue="@color/colorCircleStroke"
            app:cv_backgroundColorValue="@color/colorCircleStroke"
            app:cv_titleColor="@color/colorWhite"
            app:cv_titleSize="@dimen/_50sdp"
            app:cv_titleText="@string/current_temperature"
            app:cv_subtitleSize="@dimen/_12sdp"
            app:cv_subtitleText="@string/weather_information"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_16sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:text="@string/wind"/>

                <TextView
                    android:id="@+id/wind_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/wind_speed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/add_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:elevation="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:src="@drawable/cross"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/_16sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/_14sdp"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:text="@string/humidity"/>

                <TextView
                    android:id="@+id/humidity_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/humidity_rate"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBottomBackground"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_daily_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="none"/>

    </LinearLayout>

</LinearLayout>
